# rag-algorithm-bot

./: .env.example  README.md  TODO.md  justfile  pyproject.toml
app/: dependencies.py  main.py  prompt_loader.py  settings.py
app/clients/: llm.py
app/routes/: chat.py
app/schemas/: chat.py
prompts/: system.txt
tests/: test_question.py
