[project]
name = "ragstudybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in default args is idiomatic FastAPI

[tool.pytest.ini_options]
asyncio_mode = "auto"
